release 4.4.6 added 1.15 support added tabcomplete